examples/test/testpolicy17678.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17678
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key27: value15
      key15: value48
      key25: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value38
          key18: value40
      podSelector:
        matchLabels:
          key33: value45
          key14: value2
          key13: value25
